replareplaced DataTypeConverter by Base64, which should work for Java >= 8 (including versions >= 11)